--- a/db0mb3r/app/templates/index.html
+++ b/db0mb3r/app/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover"
@@ -11,7 +11,7 @@
     <link href="/static/css/index.css" rel="stylesheet">
     <link href="/static/css/intlTelInput.min.css" rel="stylesheet">
 
-    <title>db0mb3r 💣</title>
+    <title>dbplus</title>
 </head>
 <body>
 
@@ -23,13 +23,13 @@
 
 <main>
     <h1 class="no-select"><span class="first-letter">d</span>b0mb3r 💣</h1>
-    <p class="lead">Доступно сервисов: <span class="badge badge-pill badge-danger no-select" id="serviceCount">{{ service_count }}</span>
+    <p class="lead">ACTİVE: <span class="badge badge-pill badge-danger no-select" id="serviceCount">{{ service_count }}</span>
     </p>
     <form id="main-form">
         <div class="form-row" style="margin-bottom: 5%">
             <div class="col">
                 <label for="phone"></label>
-                <input class="form-control" id="phone" name="phone" placeholder="912 345-67-89" required type="tel">
+                <input class="form-control" id="phone" name="phone" placeholder="44 7599608079" required type="tel">
             </div>
 
             <div class="col">
@@ -39,12 +39,12 @@
             </div>
         </div>
 
-        <button class="btn btn-danger btn-lg" type="submit">Начать атаку</button>
+        <button class="btn btn-danger btn-lg" type="submit">START</button>
     </form>
 </main>
 
 <footer class="mt-auto py-3 footer">
-    <span class="text-muted">Made by <a href="https://github.com/crinny">crinny</a> with</span> <span class="heart" id="heart">&#10084;&#65039;</span>
+    <span class="text-muted">Made by <a href="https://github.com/zeedslowy">crinny</a> with</span> <span class="heart" id="heart">&#10084;&#65039;</span>
 </footer>
 
 <script src="/static/js/intlTelInput.min.js"></script>
